<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movable Type</string>
    <string name="title_activity_launch_screen">LaunchScreen</string>
    <string name="clear_button">clear</string>
    <string name="submit_button">submit</string>
    <string name="dismiss_message">OK</string>
    <string name="pass_message">Pass</string>
    <string name="game_over">Game Over\nPlayer %1$s is the winner!</string>
    <string name="game_over_draw">Game Over\nIt\'s a draw!</string>
    <string name="turn_played">Hand over to player %1$s</string>
    <string name="already_played_error">%1$s was already played.</string>
    <string name="prefix_of_previous_turn_error">%1$s is a prefix of a previously played word.</string>
    <string name="word_too_short_error">Words must be two or more letters.</string>
    <string name="not_in_dictionary_error">%1$s  was not in the dictionary.</string>
    <string name="word_error">There was an error playing this word.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
	
    <string name="new_game">New Game</string>
    <string name="how_to_play">How to play</string>
    
    <string name="loading">Loading</string>
    <string name="loading_message">
        Unpacking the word list. This may take up to a minute. This will only 
        happen the first time you load the app.
    </string>
    
    <string name="saved_game">Saved Game</string>
    
    <string name="delete_game_dialog">Delete this game?</string>
    <string name="delete_button">Delete</string>
    <string name="do_not_delete_button">Do Nothing</string>
    
    <!-- How to play text -->
    
    <string name="basics_title">The Basics</string>
    <string name="basics_text">
        Players take turns making words from a 5x5 board of tiles. 
        Tap letters from anywhere on the board to assemble a word, then tap 
        \"SUMBIT\" to turn those tiles your color.
    </string>
    
    <string name="word_rules_title">Word Rules</string>
    <string name="word_rules_text">
        - Words must have at least two letters\n- Words may only be played 
        once\n- Words may not be a prefix of a previously played word. For 
        example, if Player 1 plays the word "QUILTS", Player 2 cannot play 
        "QUILT" (but "QUILTED" and "QUIT" would both be fine). Prefixes are 
        literal, so QUART is a prefix of QUARTZ. And variations of words may be 
        played, e.g. SHORTED after SHORT.\n- No proper nouns (i.e. Capitalized 
        words), abbreviations, or acronyms.
    </string>
    
    <string name="defending_tiles_title">Defending Tiles</string>
    <string name="defending_tiles_text">
        You can protect a tile from being stolen by surrounding it with other 
        tiles of the same color. Players may use defended tiles to make a word, 
        but they won\'t change color.\n Note that defended tiles aren\'t 
        permanent, they will become vulnerable if their neighbors change color.
    </string>
    
    <string name="ending_the_game_title">Ending the Game</string>
    <string name="ending_the_game_text">
        Your score is the number of tiles that are your color. The game ends 
        when every tile on the board has a color - or - when both players pass 
        their turn in a round. Then the tiles are tallied, and the player with 
        the highest score wins!
    </string>
    
</resources>